# modern_solvers

./: README.md  mkdocs.yml  pyproject.toml
docs/: einstein.md  index.md  overview.md  puzzle.md
